name:                TeleHaskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/TeleHaskell#readme
license:             BSD3
license-file:        LICENSE
author:              Aleksandr Rodin
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Aux_Types, API_Types, Methods, Update, Inline, Method_Body
  build-depends:       base >= 4.7 && < 5
                      ,aeson
                      ,http-conduit
                      ,bytestring
                      ,http-types
                      ,text
                      ,generic-deriving
  default-language:    Haskell2010

executable TeleHaskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TeleHaskell
  default-language:    Haskell2010

test-suite TeleHaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TeleHaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/TeleHaskell
